# Sibsuits

./: .gitignore  .gitmodules  README.md
1_semestr/Informatica/11theme/: main.cs  task.md
1_semestr/Informatica/12theme/: main.cs  task.md
1_semestr/Informatica/13theme/: RomanNuber.cs  RomanNumberException.cs  task.md
1_semestr/Informatica/14theme/: Car.cs  Engine.cs  FuelTank.cs  FuelTankDisplay.cs  ICar.cs  IEngine.cs  IFuelTank.cs  IFuelTankDisplay.cs  Program.cs  task.md
1_semestr/Informatica/5theme/: main.s  task.md
1_semestr/Informatica/7theme/: task.sql
1_semestr/Informatica/8theme/: 1_task.sql  2_task.sql  4_task.sql  5_task.sql  task.md
1_semestr/Informatica/9theme/: task.md  task.sql  task2.sql  task3.sql
1_semestr/Programming/10_lab/: 1.c  2.c  3.c
1_semestr/Programming/11_lab/src/: CMakeLists.txt  main.cpp
1_semestr/Programming/1_lab/: homework.c  if.c  main.c  second_task.c  ternary_op.c
1_semestr/Programming/2_lab/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
1_semestr/Programming/3_lab/: 1.c  2.c  3.c  4.c
1_semestr/Programming/4_lab/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
1_semestr/Programming/5_lab/: 1.c  2.c  3.c
1_semestr/Programming/6_lab/: 1.c  2.c  3.c  4.c
2semester/DiscreteMath/: ekz.tex
2semester/Programming/: .gitignore  how_to_gen_docs.md
2semester/Programming/10_lab_1/: 1_task  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json  is_array.hpp  lexicographical_compare.cpp  lexicographical_compare.hpp  main.cpp  my_binary_tree.hpp  my_copy.hpp  my_functional.hpp  my_is_same.hpp  my_list.hpp  my_min.hpp  my_move.hpp  my_same_as.hpp  my_search.hpp  my_strcmp.hpp  my_string.hpp  my_swap.hpp  my_vector.hpp  output.txt  remove_reference.hpp  student.hpp  unique_ptr.hpp  warning.md
2semester/Programming/Course_work_GUI/: CMakeLists.txt  how_to_run.md  main.cpp  student.hpp  studentapp.cpp  studentapp.hpp
2semester/SAOD/: .gitignore
2semester/TRPO/: guide.md  link_to_submodule.md
(+190 files in other folders)
